--- a/UCR.Negotium/UserControls/Inversiones.xaml
+++ b/UCR.Negotium/UserControls/Inversiones.xaml
@@ -8,7 +8,6 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="440" d:DesignWidth="1200">
-
     <Grid Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition Height="7*"/>
@@ -24,44 +23,27 @@
                     <RowDefinition Height="7*"/>
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
-
                 <Label Grid.ColumnSpan="2" Style="{StaticResource tableTitleStyle}"
                     Content="Registro de Inversiones mayores a 1 Año (Menores a 1 Año registrarse como costos)"/>
-                
-                <DataGrid Grid.Column="0" Grid.Row="1"
-                ItemsSource="{Binding InversionesList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
-                SelectedItem="{Binding InversionSelected, UpdateSourceTrigger=PropertyChanged}"
-                SelectionUnit="FullRow" 
-                BorderThickness="1"
-                BorderBrush="{DynamicResource AccentColorBrush}"
-                AllowDrop="False" 
-                CanUserAddRows="False" 
-                CanUserDeleteRows="False" 
-                IsReadOnly="True" 
-                AutoGenerateColumns="False"
-                Margin="30,5,30,15">
-
+                <DataGrid Grid.Column="0" Grid.Row="1" SelectionUnit="FullRow"
+                          ItemsSource="{Binding InversionesList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
+                          SelectedItem="{Binding InversionSelected, UpdateSourceTrigger=PropertyChanged}"
+                          BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                          AllowDrop="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" 
+                          AutoGenerateColumns="False" Margin="30,5,30,15">
                     <DataGrid.Style>
                         <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                             <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                         </Style>
                     </DataGrid.Style>
-
                     <DataGrid.Columns>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DescripcionRequerimiento}" Header="Descripción" Width="4*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="2*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=CostoUnitarioFormat}" Header="Costo Unitario (₡)" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=UnidadMedida}" Header="Unidad Medida" Width="2*"/>
-                        <DataGridCheckBoxColumn
-                    Binding="{Binding Path=Depreciable}" Header="Depreciable" Width="2*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=VidaUtil}" Header="Vida Útil(Años)" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=SubtotalFormat}" Header="Subtotal (₡)" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DescripcionRequerimiento}" Header="Descripción" Width="4*"/>
+                        <DataGridTextColumn Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="2*"/>
+                        <DataGridTextColumn Binding="{Binding Path=CostoUnitarioFormat}" Header="Costo Unitario (₡)" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=UnidadMedida}" Header="Unidad Medida" Width="2*"/>
+                        <DataGridCheckBoxColumn Binding="{Binding Path=Depreciable}" Header="Depreciable" Width="2*"/>
+                        <DataGridTextColumn Binding="{Binding Path=VidaUtil}" Header="Vida Útil(Años)" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=SubtotalFormat}" Header="Subtotal (₡)" Width="3*"/>
                     </DataGrid.Columns>
                 </DataGrid>
                 <Grid Grid.Row="3">
