--- a/UCR.Negotium/UserControls/Reinversiones.xaml
+++ b/UCR.Negotium/UserControls/Reinversiones.xaml
@@ -7,7 +7,6 @@
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" d:DesignHeight="440" d:DesignWidth="1200">
-
     <Grid Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition Height="7*"/>
@@ -24,68 +23,50 @@
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
 
-                <DataGrid Grid.ColumnSpan="3"
-                ItemsSource="{Binding ReinversionesList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
-                SelectedItem="{Binding ReinversionSelected, UpdateSourceTrigger=PropertyChanged}"
-                SelectionUnit="FullRow" 
-                BorderThickness="1"
-                BorderBrush="{DynamicResource AccentColorBrush}"
-                AllowDrop="False" 
-                CanUserAddRows="False" 
-                CanUserDeleteRows="False" 
-                IsReadOnly="True" 
-                AutoGenerateColumns="False"
-                Margin="30,5,30,15">
-
+                <DataGrid Grid.ColumnSpan="3" ItemsSource="{Binding ReinversionesList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
+                          SelectedItem="{Binding ReinversionSelected, UpdateSourceTrigger=PropertyChanged}"
+                          SelectionUnit="FullRow" BorderThickness="1" AllowDrop="False"
+                          BorderBrush="{DynamicResource AccentColorBrush}" CanUserAddRows="False" 
+                          CanUserDeleteRows="False" IsReadOnly="True" AutoGenerateColumns="False"
+                          Margin="30,5,30,15">
                     <DataGrid.Style>
                         <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                             <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                         </Style>
                     </DataGrid.Style>
-
                     <DataGrid.Columns>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DescripcionRequerimiento}" Header="Descripción" Width="4*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=AnoReinversion}" Header="Año de Reinversión" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="1.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=CostoUnitarioFormat}" Header="Costo Unitario (₡)" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=UnidadMedida}" Header="Unidad Medida" Width="2*"/>
-                        <DataGridCheckBoxColumn
-                    Binding="{Binding Path=Depreciable}" Header="Depreciable" Width="1.8*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=VidaUtil}" Header="Vida Útil(Años)" Width="2*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=SubtotalFormat}" Header="Subtotal (₡)" Width="2*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DescripcionRequerimiento}" Header="Descripción" Width="4*"/>
+                        <DataGridTextColumn Binding="{Binding Path=AnoReinversion}" Header="Año de Reinversión" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=Cantidad}" Header="Cantidad" Width="1.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=CostoUnitarioFormat}" Header="Costo Unitario (₡)" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=UnidadMedida}" Header="Unidad Medida" Width="2*"/>
+                        <DataGridCheckBoxColumn Binding="{Binding Path=Depreciable}" Header="Depreciable" Width="1.8*"/>
+                        <DataGridTextColumn Binding="{Binding Path=VidaUtil}" Header="Vida Útil(Años)" Width="2*"/>
+                        <DataGridTextColumn Binding="{Binding Path=SubtotalFormat}" Header="Subtotal (₡)" Width="2*"/>
                     </DataGrid.Columns>
                 </DataGrid>
-
                 <Grid Grid.Row="1">
                     <Button Width="40" Margin="30,0" Height="40" Name="btnAgregarReinversion"
                             Click="btnAgregarReinversion_Click"
-                        Style="{StaticResource circleButton}" ToolTip="Agregar una Nueva Reinversión">
+                            Style="{StaticResource circleButton}" ToolTip="Agregar una Nueva Reinversión">
                         <iconPacks:PackIconModern Width="16" Height="16" Kind="Add" Foreground="Teal"/>
                     </Button>
                     <Button Width="40" Margin="70,0" Height="40" Name="btnEditarReinversion"
                             Click="btnEditarReinversion_Click"
-                        Style="{StaticResource circleButton}" ToolTip="Editar la Reinversión Seleccionada">
+                            Style="{StaticResource circleButton}" ToolTip="Editar la Reinversión Seleccionada">
                         <iconPacks:PackIconModern Width="16" Height="16" Kind="Edit" Foreground="Teal"/>
                     </Button>
                     <Button Width="40" Margin="110,0" Height="40" Name="btnEliminarReinversion" 
                             Click="btnEliminarReinversion_Click"
-                        Style="{StaticResource circleButton}" ToolTip="Eliminar la Reinversión Seleccionada">
+                            Style="{StaticResource circleButton}" ToolTip="Eliminar la Reinversión Seleccionada">
                         <iconPacks:PackIconModern Width="16" Height="16" Kind="Delete" Foreground="Teal"/>
                     </Button>
                 </Grid>
-
                 <Grid Grid.Row="2" Margin="30,5,30,15">
                     <TextBlock Text="Total Reinvertido por Año:" FontSize="14"/>
                     <DataGrid Margin="0,25,0,0" ItemsSource="{Binding DTTotalesReinversiones, UpdateSourceTrigger=PropertyChanged}"
-                          SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
-                           ColumnWidth="100">
+                              SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                              ColumnWidth="100">
                     </DataGrid>
                 </Grid>
             </Grid>
