--- a/UCR.Negotium/UserControls/AnalisisAmbiental/AnalisisAmbiental.xaml
+++ b/UCR.Negotium/UserControls/AnalisisAmbiental/AnalisisAmbiental.xaml
@@ -23,39 +23,25 @@
                     <RowDefinition Height="7*"/>
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
-
                 <Label Grid.ColumnSpan="2" Style="{StaticResource tableTitleStyle}"
                     Content="Registro de Factores Ambientales del Proyecto"/>
-
                 <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding FactorAmbientalList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
-                SelectedItem="{Binding FactorAmbientalSelected, UpdateSourceTrigger=PropertyChanged}"
-                SelectionUnit="FullRow"
-                BorderThickness="1"
-                BorderBrush="{DynamicResource AccentColorBrush}"
-                AllowDrop="False" 
-                CanUserAddRows="False" 
-                CanUserDeleteRows="False" 
-                IsReadOnly="True" 
-                AutoGenerateColumns="False"
-                Margin="30,5,30,15">
-
+                          SelectedItem="{Binding FactorAmbientalSelected, UpdateSourceTrigger=PropertyChanged}"
+                          SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                          AllowDrop="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" 
+                          AutoGenerateColumns="False" Margin="30,5,30,15">
                     <DataGrid.Style>
                         <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                             <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                         </Style>
                     </DataGrid.Style>
                     <DataGrid.Columns>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=NombreFactor}" Header="Factor" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=CondicionAfectada}" Header="Condición Afectada" Width="2*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=ElementoAmbiental}" Header="Elemento Ambiental" Width="2*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=Clasificacion}" Header="Clasificación" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=NombreFactor}" Header="Factor" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=CondicionAfectada}" Header="Condición Afectada" Width="2*"/>
+                        <DataGridTextColumn Binding="{Binding Path=ElementoAmbiental}" Header="Elemento Ambiental" Width="2*"/>
+                        <DataGridTextColumn Binding="{Binding Path=Clasificacion}" Header="Clasificación" Width="2.5*"/>
                     </DataGrid.Columns>
                 </DataGrid>
-
                 <Grid Grid.Row="3">
                     <Button Width="40" Margin="30,0" Height="40" Name="btnCrearFactorAmbiental"
                             Style="{StaticResource circleButton}" ToolTip="Agregar un Nuevo Factor Ambiental"
