--- a/UCR.Negotium/UserControls/Financiamiento.xaml
+++ b/UCR.Negotium/UserControls/Financiamiento.xaml
@@ -7,7 +7,6 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="440" d:DesignWidth="1200">
-
     <Grid Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition Height="7*"/>
@@ -30,12 +29,11 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="70"/>
                 </Grid.RowDefinitions>
-                
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Margin="30,20">
                     <Label Content="Monto a Financiar:"/>
                     <TextBox Name="tbMonto" TextChanged="tbMonto_TextChanged" 
-                                         Text="{Binding FinanciamientoSelected.MontoFinanciamiento}" Margin="0,0,27,0"
-                                         ToolTip="Ingrese en este campo el monto a financiar del Proyecto"/>
+                             Text="{Binding FinanciamientoSelected.MontoFinanciamiento}" Margin="0,0,27,0"
+                             ToolTip="Ingrese en este campo el monto a financiar del Proyecto"/>
                 </StackPanel>
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Grid.Column="1" Margin="10,20">
                     <Label Content="Finalización del Financiamiento:"/>
@@ -46,14 +44,14 @@
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Grid.Column="2" Margin="10,20">
                     <Label Content="Año Inicial del Pago:"/>
                     <ComboBox Margin="0,0,75,0" Width="180" ItemsSource="{Binding AnosDisponibles, UpdateSourceTrigger=PropertyChanged}"
-                                          SelectedValue="{Binding FinanciamientoSelected.AnoInicialPago}" />
+                              SelectedValue="{Binding FinanciamientoSelected.AnoInicialPago}" />
                 </StackPanel>
                 <StackPanel Style="{StaticResource verticalPanelFormStyle}" Margin="10,20" Grid.Column="3">
                     <Label Content="Monto con interés fijo:"/>
                     <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
                         <CheckBox FlowDirection="LeftToRight" Name="cbFijo" 
-                                              IsChecked="{Binding FinanciamientoSelected.InteresFijo}" 
-                                              Checked="cbFijo_Checked" Loaded="cbFijo_Loaded">
+                                  IsChecked="{Binding FinanciamientoSelected.InteresFijo}" 
+                                  Checked="cbFijo_Checked" Loaded="cbFijo_Loaded">
                             <TextBlock Text="Si"/>
                         </CheckBox>
                         <CheckBox FlowDirection="LeftToRight" Name="cbVariable" Margin="10,0,0,0" Checked="cbVariable_Checked">
@@ -63,18 +61,18 @@
                 </StackPanel>
                 <Grid Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Left">
                     <iconPacks:PackIconModern Width="16" Height="16" Kind="EditAdd" Foreground="Teal"
-                                                  Margin="0,7,150,0" HorizontalAlignment="Right"/>
+                                              Margin="0,7,150,0" HorizontalAlignment="Right"/>
                     <Label HorizontalAlignment="Left" Margin="20,0,0,0">
-                        <Hyperlink Name="lblTasaInteres" Click="lblTasaInteres_Click">Tasa de Interés</Hyperlink>
+                        <Hyperlink Name="lblTasaInteres" Click="lblTasaInteres_Click">
+                            Tasa de Interés
+                        </Hyperlink>
                     </Label>
                 </Grid>
-
                 <DataGrid ItemsSource="{Binding DTFinanciamiento, UpdateSourceTrigger=PropertyChanged}"
                           SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
                           Margin="30,0,30,15" ColumnWidth="100" CanUserSortColumns="False"
-                          Grid.ColumnSpan="5" Grid.Row="1"
-                          Name="dgFinanciamiento" Loaded="dgFinanciamiento_Loaded">
-
+                          Grid.ColumnSpan="5" Grid.Row="1" Name="dgFinanciamiento" 
+                          Loaded="dgFinanciamiento_Loaded">
                 </DataGrid>
                 <Grid Grid.Row="2" Grid.Column="4" Margin="0,0,30,0">
                     <Button Style="{StaticResource saveButtonStyle}" Name="btnGuardar" Click="btnGuardar_Click">
