--- a/UCR.Negotium/UserControls/ProyeccionVentas.xaml
+++ b/UCR.Negotium/UserControls/ProyeccionVentas.xaml
@@ -7,7 +7,6 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="440" d:DesignWidth="1200">
-
     <Grid Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition Height="7*"/>
@@ -23,76 +22,55 @@
                     <RowDefinition Height="1*"/>
                     <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
-
-                <DataGrid Grid.ColumnSpan="3"
-                ItemsSource="{Binding ProyeccionesList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
-                SelectedItem="{Binding ProyeccionSelected}"
-                SelectionUnit="FullRow" 
-                BorderThickness="1"
-                BorderBrush="{DynamicResource AccentColorBrush}"
-                AllowDrop="False" 
-                CanUserAddRows="False" 
-                CanUserDeleteRows="False" 
-                IsReadOnly="True" 
-                AutoGenerateColumns="False"
-                Margin="30,5,30,15">
-
+                <DataGrid Grid.ColumnSpan="3" ItemsSource="{Binding ProyeccionesList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
+                          SelectedItem="{Binding ProyeccionSelected}" SelectionUnit="FullRow" 
+                          BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                          AllowDrop="False" CanUserAddRows="False" CanUserDeleteRows="False" 
+                          IsReadOnly="True" AutoGenerateColumns="False" Margin="30,5,30,15">
                     <DataGrid.Style>
                         <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
                             <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
                         </Style>
                     </DataGrid.Style>
-
                     <DataGrid.Columns>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=NombreArticulo}" Header="Artículo" Width="4*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=UnidadMedida}" Header="Unidad" Width="3*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[0].SubtotalFormat}" Header="Enero" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[1].SubtotalFormat}" Header="Febrero" Width="3*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[2].SubtotalFormat}" Header="Marzo" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[3].SubtotalFormat}" Header="Abril" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[4].SubtotalFormat}" Header="Mayo" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[5].SubtotalFormat}" Header="Junio" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[6].SubtotalFormat}" Header="Julio" Width="2.5*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[7].SubtotalFormat}" Header="Agosto" Width="3*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[8].SubtotalFormat}" Header="Setiembre" Width="3*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[9].SubtotalFormat}" Header="Octubre" Width="3*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[10].SubtotalFormat}" Header="Noviembre" Width="3*"/>
-                        <DataGridTextColumn
-                    Binding="{Binding Path=DetallesProyeccionVenta[11].SubtotalFormat}" Header="Diciembre" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=NombreArticulo}" Header="Artículo" Width="4*"/>
+                        <DataGridTextColumn Binding="{Binding Path=UnidadMedida}" Header="Unidad" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[0].SubtotalFormat}" Header="Enero" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[1].SubtotalFormat}" Header="Febrero" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[2].SubtotalFormat}" Header="Marzo" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[3].SubtotalFormat}" Header="Abril" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[4].SubtotalFormat}" Header="Mayo" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[5].SubtotalFormat}" Header="Junio" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[6].SubtotalFormat}" Header="Julio" Width="2.5*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[7].SubtotalFormat}" Header="Agosto" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[8].SubtotalFormat}" Header="Setiembre" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[9].SubtotalFormat}" Header="Octubre" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[10].SubtotalFormat}" Header="Noviembre" Width="3*"/>
+                        <DataGridTextColumn Binding="{Binding Path=DetallesProyeccionVenta[11].SubtotalFormat}" Header="Diciembre" Width="3*"/>
                     </DataGrid.Columns>
                 </DataGrid>
                 <Grid Grid.Row="1">
                     <Button Width="40" Margin="30,0" Height="40" Name="btnAgregarProyeccion" Click="btnAgregarProyeccion_Click"
-                        Style="{StaticResource circleButton}" ToolTip="Agregar un Nuevo Producto para Proyección de Oferta">
+                            Style="{StaticResource circleButton}" 
+                            ToolTip="Agregar un Nuevo Producto para Proyección de Oferta">
                         <iconPacks:PackIconModern Width="16" Height="16" Kind="Add" Foreground="Teal"/>
                     </Button>
                     <Button Width="40" Margin="70,0" Height="40" Name="btnEditarProyeccion" Click="btnEditarProyeccion_Click"
-                        Style="{StaticResource circleButton}" ToolTip="Editar la Proyección de Oferta Seleccionada">
+                            Style="{StaticResource circleButton}" 
+                            ToolTip="Editar la Proyección de Oferta Seleccionada">
                         <iconPacks:PackIconModern Width="16" Height="16" Kind="Edit" Foreground="Teal"/>
                     </Button>
                     <Button Width="40" Margin="110,0" Height="40" Name="btnEliminarProyeccion" Click="btnEliminarProyeccion_Click"
-                        Style="{StaticResource circleButton}" ToolTip="Eliminar la Proyección de Oferta Seleccionada">
+                            Style="{StaticResource circleButton}" 
+                            ToolTip="Eliminar la Proyección de Oferta Seleccionada">
                         <iconPacks:PackIconModern Width="16" Height="16" Kind="Delete" Foreground="Teal"/>
                     </Button>
                 </Grid>
                 <Grid Grid.Row="2" Margin="30,5,30,15">
                     <TextBlock Text="Ingresos Generados por Año:" FontSize="14"/>
                     <DataGrid Margin="0,25,0,0" ItemsSource="{Binding DTProyeccionesTotales, UpdateSourceTrigger=PropertyChanged}"
-                          SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
-                           ColumnWidth="100">
+                              SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                              ColumnWidth="100">
                     </DataGrid>
                 </Grid>
             </Grid>
