--- a/UCR.Negotium/MainWindow.xaml
+++ b/UCR.Negotium/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:UCR.Negotium"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+        BorderThickness="2" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize"
         Title="Principal | Negotium v1.0" Height="550" Width="950">
     <Grid>
@@ -15,17 +15,27 @@
             <ColumnDefinition Width="100*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="10*"/>
-            <RowDefinition Height="90*"/>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Menu Grid.Column="0" Grid.Row="0" x:Name="mainMenu" Margin="5,5,0,0" VerticalAlignment="Stretch" 
               HorizontalAlignment="Left">
-            <MenuItem Header="Archivo">
-                <MenuItem Header="Nuevo Proyecto" Name="menuItemCrear" Click="btnCrear_Click">
+            <MenuItem Header="Archivo" Style="{StaticResource menuItemStyle}">
+                <MenuItem Header="Nuevo Proyecto" Name="menuItemCrear" Click="btnCrear_Click" Style="{StaticResource menuItemStyle}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconModern Kind="Add" Width="12" Height="12" Margin="4,0,0,0"/>
+                    </MenuItem.Icon>
                 </MenuItem>
-            </MenuItem>
-            <MenuItem Header="Ayuda">
-
+                <MenuItem Header="Exportar Datos" Name="menuItemExport" Click="menuItemExport_Click" Style="{StaticResource menuItemStyle}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconModern Kind="CabinetOut" Width="12" Height="12" Margin="4,0,0,0"/>
+                    </MenuItem.Icon>
+                </MenuItem>
+                <MenuItem Header="Importar Datos" Name="menuItemImport" Click="menuItemImport_Click" Style="{StaticResource menuItemStyle}">
+                    <MenuItem.Icon>
+                        <iconPacks:PackIconModern Kind="CabinetIn" Width="12" Height="12" Margin="4,0,0,0"/>
+                    </MenuItem.Icon>
+                </MenuItem>
             </MenuItem>
         </Menu>
         <Grid Grid.Row="1">
