--- a/UCR.Negotium/Resources/Styles.xaml
+++ b/UCR.Negotium/Resources/Styles.xaml
@@ -1,9 +1,29 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    >
-    
+                    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+
+    <!-- Menu Item-->
+    <Style x:Key="menuItemStyle" TargetType="{x:Type MenuItem}" BasedOn="{StaticResource MetroMenuItem}">
+        <Style.Triggers>
+            <Trigger Property="MenuItem.IsMouseOver" Value="true">
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="Gray"/>
+                <Setter Property="Background" Value="Teal"/>
+                <Setter Property="Foreground" Value="White"/>
+            </Trigger>
+            <Trigger Property="MenuItem.IsSubmenuOpen" Value="true">
+                <Setter Property="BorderThickness" Value="1"/>
+                <Setter Property="BorderBrush" Value="Gray"/>
+                <Setter Property="Background" Value="#CC00ABA9"/>
+                <Setter Property="Foreground" Value="Black"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
     <Style x:Key="menuTabControl" TargetType="{x:Type TabControl}">
         <Setter Property="BorderBrush" Value="Gainsboro"/>
+        <Setter Property="Margin" Value="15"/>
     </Style>
 
     <Style x:Key="menuTabItem" TargetType="{x:Type TabItem}">
@@ -31,16 +51,6 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type ContentControl}">
-        <Setter Property="ContentStringFormat" 
-            Value="{Binding Resolution, StringFormat=N{0}}" />
-    </Style>
-    
-
-    <Style x:Key="progressBar" TargetType="ProgressBar">
-        <Setter Property="Height" Value="20"/>
-    </Style>
-
     <Style x:Key="borderStyle" TargetType="Border">
         <Setter Property="BorderBrush" Value="Gray"/>
         <Setter Property="BorderThickness" Value="1"/>
@@ -66,6 +76,7 @@
     <Style x:Key="panelFormStyle" TargetType="StackPanel">
         <Setter Property="Margin" Value="0,4"/>
     </Style>
+    
     <Style x:Key="gridFormStyle" TargetType="Grid">
         <Setter Property="Margin" Value="0,5"/>
     </Style>
@@ -77,7 +88,6 @@
         <Setter Property="Orientation" Value="Horizontal"/>
     </Style>
 
-
     <Style x:Key="generalButtons" TargetType="Button" BasedOn="{StaticResource MetroButton}">
         <Setter Property="Width" Value="100"/>
         <Setter Property="Height" Value="30"/>
@@ -87,6 +97,7 @@
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
+    
     <Style x:Key="cancelButtonStyle" TargetType="Button" BasedOn="{StaticResource generalButtons}">
         <Setter Property="VerticalAlignment" Value="Top"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
@@ -106,5 +117,49 @@
     <Style x:Key="circleButton" TargetType="Button" BasedOn="{StaticResource MetroCircleButtonStyle}">
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="VerticalAlignment" Value="Top"/>
+    </Style>
+
+    <Style x:Key="progressBlock" TargetType="Grid">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Background" Value="Teal"/>
+    </Style>
+
+    <Style x:Key="progressTitle" TargetType="TextBlock">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="Margin" Value="5,0,5,0"/>
+    </Style>
+
+    <Style x:Key="flyouts" TargetType="Controls:Flyout">
+        <Setter Property="AutoCloseInterval" Value="1000"/>
+        <Setter Property="Background" Value="Teal"/>
+        <Setter Property="Position" Value="Right"/>
+    </Style>
+
+    <Style x:Key="tileStyle" TargetType="Controls:Tile">
+        <Setter Property="Background" Value="Teal"/>
+        <Setter Property="HorizontalTitleAlignment" Value="Center"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="Controls:ControlsHelper.MouseOverBorderBrush" Value="{DynamicResource BlackBrush}"/>
+        <Setter Property="Width" Value="120"/>
+        <Setter Property="Height" Value="60"/>
+    </Style>
+
+    <Style x:Key="iconLarge" TargetType="iconPacks:PackIconModern">
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="Height" Value="20"/>
+    </Style>
+
+    <Style x:Key="gridReadOnly" TargetType="DataGrid" BasedOn="{StaticResource MetroDataGrid}">
+        <Setter Property="SelectionUnit" Value="FullRow"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{DynamicResource AccentColorBrush}"/>
+        <Setter Property="AllowDrop" Value="False"/>
+        <Setter Property="CanUserAddRows" Value="False"/>
+        <Setter Property="CanUserDeleteRows" Value="False"/>
+        <Setter Property="IsReadOnly" Value="True"/>
+        <Setter Property="AutoGenerateColumns" Value="False"/>
+        <Setter Property="Margin" Value="30,5,30,15"/>
+        <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}"/>
     </Style>
 </ResourceDictionary>
