--- a/UCR.Negotium/UserControls/AnalisisAmbiental/AnalisisAmbiental.xaml
+++ b/UCR.Negotium/UserControls/AnalisisAmbiental/AnalisisAmbiental.xaml
@@ -7,7 +7,6 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              mc:Ignorable="d" 
              d:DesignHeight="440" d:DesignWidth="1200">
-
     <Grid Background="AliceBlue">
         <Grid.RowDefinitions>
             <RowDefinition Height="7*"/>
@@ -19,45 +18,69 @@
         <Border Grid.Row="1" Style="{StaticResource borderStyle}">
             <Grid Margin="10">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="9*"/>
                     <RowDefinition Height="1*"/>
-                    <RowDefinition Height="7*"/>
-                    <RowDefinition Height="2*"/>
                 </Grid.RowDefinitions>
-                <Label Grid.ColumnSpan="2" Style="{StaticResource tableTitleStyle}"
-                    Content="Registro de Factores Ambientales del Proyecto"/>
-                <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding FactorAmbientalList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="7*"/>
+                        <RowDefinition Height="2*"/>
+                    </Grid.RowDefinitions>
+                    <Label Grid.ColumnSpan="2" Style="{StaticResource tableTitleStyle}"
+                    Content="Registro de Factores Ambientales"/>
+                    <DataGrid Grid.Row="1" Grid.Column="0" ItemsSource="{Binding FactorAmbientalList, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
                           SelectedItem="{Binding FactorAmbientalSelected, UpdateSourceTrigger=PropertyChanged}"
-                          SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
-                          AllowDrop="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" 
-                          AutoGenerateColumns="False" Margin="30,5,30,15">
-                    <DataGrid.Style>
-                        <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
-                            <Setter Property="AlternatingRowBackground" Value="{DynamicResource GrayBrush10}" />
-                        </Style>
-                    </DataGrid.Style>
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding Path=NombreFactor}" Header="Factor" Width="2.5*"/>
-                        <DataGridTextColumn Binding="{Binding Path=CondicionAfectada}" Header="Condición Afectada" Width="2*"/>
-                        <DataGridTextColumn Binding="{Binding Path=ElementoAmbiental}" Header="Elemento Ambiental" Width="2*"/>
-                        <DataGridTextColumn Binding="{Binding Path=Clasificacion}" Header="Clasificación" Width="2.5*"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-                <Grid Grid.Row="3">
-                    <Button Width="40" Margin="30,0" Height="40" Name="btnCrearFactorAmbiental"
+                          Style="{StaticResource gridReadOnly}">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Binding="{Binding Path=NombreFactor}" Header="Factor" Width="2.5*"/>
+                            <DataGridTextColumn Binding="{Binding Path=NombreCondicionAfectada}" Header="Condición Afectada" Width="2*"/>
+                            <DataGridTextColumn Binding="{Binding Path=NombreElementoAmbiental}" Header="Elemento Ambiental" Width="2*"/>
+                            <DataGridTextColumn Binding="{Binding Path=NombreSigno}" Header="Impacto" Width="2*"/>
+                            <DataGridTextColumn Binding="{Binding Path=NombreClasificacion}" Header="Clasificación" Width="2.5*">
+                                <DataGridTextColumn.CellStyle>
+                                    <Style TargetType="DataGridCell">
+                                        <Setter Property="Foreground" Value="White"/>
+                                        <Style.Triggers>
+                                            <DataTrigger Binding="{Binding Path=NombreClasificacion}" 
+                                         Value="Irrelevante">
+                                                <Setter Property="Background" Value="LightGreen"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Path=NombreClasificacion}" 
+                                         Value="Moderado">
+                                                <Setter Property="Background" Value="#FFF770"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Path=NombreClasificacion}" 
+                                         Value="Severo">
+                                                <Setter Property="Background" Value="#FFA936"/>
+                                            </DataTrigger>
+                                            <DataTrigger Binding="{Binding Path=NombreClasificacion}" 
+                                         Value="Crítico">
+                                                <Setter Property="Background" Value="LightSalmon"/>
+                                            </DataTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </DataGridTextColumn.CellStyle>
+                            </DataGridTextColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                    <Grid Grid.Row="3">
+                        <Button Width="40" Margin="30,0" Height="40" Name="btnCrearFactorAmbiental"
                             Style="{StaticResource circleButton}" ToolTip="Agregar un Nuevo Factor Ambiental"
                             Click="btnCrearFactorAmbiental_Click">
-                        <iconPacks:PackIconModern Width="16" Height="16" Kind="Add" Foreground="Teal"/>
-                    </Button>
-                    <Button Width="40" Margin="70,0" Height="40" Name="btnEditarFactorAmbiental"
+                            <iconPacks:PackIconModern Width="16" Height="16" Kind="Add" Foreground="Teal"/>
+                        </Button>
+                        <Button Width="40" Margin="70,0" Height="40" Name="btnEditarFactorAmbiental"
                             Style="{StaticResource circleButton}" ToolTip="Editar el Factor Ambiental Seleccionado"
                             Click="btnEditarFactorAmbiental_Click">
-                        <iconPacks:PackIconModern Width="16" Height="16" Kind="Edit" Foreground="Teal"/>
-                    </Button>
-                    <Button Width="40" Margin="110,0" Height="40" Name="btnEliminarFactorAmbiental"
+                            <iconPacks:PackIconModern Width="16" Height="16" Kind="Edit" Foreground="Teal"/>
+                        </Button>
+                        <Button Width="40" Margin="110,0" Height="40" Name="btnEliminarFactorAmbiental"
                             Style="{StaticResource circleButton}" ToolTip="Eliminar el Factor Ambiental Seleccionado"
                             Click="btnEliminarFactorAmbiental_Click">
-                        <iconPacks:PackIconModern Width="16" Height="16" Kind="Delete" Foreground="Teal"/>
-                    </Button>
+                            <iconPacks:PackIconModern Width="16" Height="16" Kind="Delete" Foreground="Teal"/>
+                        </Button>
+                    </Grid>
                 </Grid>
             </Grid>
         </Border>
